--- a/Client/package.json
+++ b/Client/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
+    "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.22.0",
     "redux-thunk": "^3.1.0"
   },
