--- a/Client/package.json
+++ b/Client/package.json
@@ -21,7 +21,8 @@
     "react-redux": "^9.1.0",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.22.0",
-    "redux-thunk": "^3.1.0"
+    "redux-thunk": "^3.1.0",
+    "xtypejs": "^0.7.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
