--- a/Client/package.json
+++ b/Client/package.json
@@ -22,6 +22,7 @@
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.22.0",
     "redux-thunk": "^3.1.0",
+    "stripe": "^14.20.0",
     "xtypejs": "^0.7.1"
   },
   "devDependencies": {
