--- a/Server/package.json
+++ b/Server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "date-fns": "^3.3.1",
@@ -23,6 +24,7 @@
     "mongoose": "^8.1.1",
     "mongoose-sequence": "^6.0.1",
     "nodemon": "^3.0.3",
+    "stripe": "^14.20.0",
     "uuid": "^9.0.1"
   }
 }
