--- a/Client/package.json
+++ b/Client/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.1.0",
+    "@stripe/react-stripe-js": "^2.5.1",
+    "@stripe/stripe-js": "^3.0.7",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "jquery": "^3.7.1",
