--- a/Client/package.json
+++ b/Client/package.json
@@ -13,7 +13,6 @@
     "@reduxjs/toolkit": "^2.1.0",
     "@stripe/react-stripe-js": "^2.5.1",
     "@stripe/stripe-js": "^3.0.7",
-    "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
@@ -24,8 +23,7 @@
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.22.0",
     "redux-thunk": "^3.1.0",
-    "stripe": "^14.20.0",
-    "xtypejs": "^0.7.1"
+    "stripe": "^14.20.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
