--- a/Client/package.json
+++ b/Client/package.json
@@ -13,11 +13,12 @@
     "@reduxjs/toolkit": "^2.1.0",
     "@stripe/react-stripe-js": "^2.5.1",
     "@stripe/stripe-js": "^3.0.7",
-    "bootstrap": "^5.3.2",
+    "bootstrap": "^5.3.3",
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
+    "react-bootstrap-sidebar-menu": "^2.0.3",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-bootstrap": "^0.26.2",
