--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,11 @@ services:
       - '8080:8080'
   server:
     build: Server
+    env_file:
+      - .env
     environment:
       - PORT=3001
       - CLIENT_URL=http://localhost:8080
-      - JWT_SECRET=eb439ea020157f820f37a3184dc2d2afaec792897f19ad41ba0433152b646
-                    6f360b67ffa7118f14017ac907a3cffbca0cdb91984c408aa667c2e1a471fcb9e3b
       - MONGO_URI=mongodb+srv://admin00:123@giftbasket.jrkveu5.mongodb.net/GiftBasketDB
     ports:
       - '3001:3001'
