--- a/Client/package.json
+++ b/Client/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^9.1.0",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.22.0",
+    "react-thailand-address-typeahead": "^2.0.1",
     "redux-thunk": "^3.1.0",
     "stripe": "^14.20.0"
   },
